# claude-config

./: .gitattributes  .gitignore  CLAUDE.md  CUsersJacobAppDataLocalTemptlc_baseline.txt  LAZY_QUEUE.md  manifest.psd1  ruff.toml  setup.ps1  setup.py  sh.exe.stackdump
user/plugins/local-tools/plugins/work-logging-plugin/: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
user/plugins/local-tools/plugins/work-logging-plugin/.claude-plugin/: hooks.json  plugin.json
user/plugins/local-tools/plugins/work-logging-plugin/docs/: PHASES.md  RESEARCH.md  RESEARCH_PROMPT.md  RESEARCH_SUMMARY.md  SPEC.md
user/plugins/local-tools/plugins/work-logging-plugin/docs/digestible-content/: PHASES.md  RESEARCH.md  RESEARCH_PROMPT.md  RESEARCH_SUMMARY.md  (+1 more)
user/plugins/local-tools/plugins/work-logging-plugin/hooks/: evaluate-surfacing.sh
user/plugins/local-tools/plugins/work-logging-plugin/scripts/: correlate_headless.py  enrich_features.py  evaluate_and_notify.py  init_data_repo.py  migrate_work_log.py  normalize_work_log.py  seed_knowledge_bank.py  study.py
user/plugins/local-tools/plugins/work-logging-plugin/tests/: conftest.py  test_atomic_tools.py  test_correlate_headless.py  test_correlation.py  test_enrich_features.py  test_evaluate_and_notify.py  test_headless_judge.py  test_knowledge_bank.py  test_managed_blocks.py  test_ntfy.py  test_persistence.py  test_progress.py  test_server.py  test_study_context.py  test_surfacing.py  test_surfacing_log.py  test_tools_core.py  test_tools_import.py  test_tools_synthesize.py  test_tools_work_log.py  test_vault_generator.py
(+3148 files in other folders)
