[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["servers*", "tests*"]

[project]
name = "work-logging-plugin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.6",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff",
    "pytest",
    "pytest-asyncio>=0.23",
    "types-pyyaml",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
